force-app/main/default/objects/TAG_Headcount__c/TAG_Headcount__c.object-meta.xml
<CustomObject>
    <label>TAG Headcount</label>
    <nameField>
        <displayFormat>TAG-{00}</displayFormat>
        <label>TAG Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TAG Headcount</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>