force-app/main/default/objects/TAG_Headcount__c/fields/Budgeted_HC__c.field-meta.xml
<CustomField>
    <fullName>Budgeted_HC__c</fullName>
    <label>Budgeted HC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>