force-app/main/default/objects/TAG_Headcount__c/fields/Current_HC__c.field-meta.xml
<CustomField>
    <fullName>Current_HC__c</fullName>
    <label>Current HC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>