force-app/main/default/objects/TAG_Headcount__c/fields/In_Recruitment__c.field-meta.xml
<CustomField>
    <fullName>In_Recruitment__c</fullName>
    <label>In Recruitment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>