force-app/main/default/objects/TAG_Headcount__c/fields/Open_HC__c.field-meta.xml
<CustomField>
    <fullName>Open_HC__c</fullName>
    <formula>Budgeted_HC__c - Current_HC__c - In_Recruitment__c - Pending_Starts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open HC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>