force-app/main/default/objects/TAG_Headcount__c/fields/Pending_Starts__c.field-meta.xml
<CustomField>
    <fullName>Pending_Starts__c</fullName>
    <label>Pending Starts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>