force-app/main/default/objects/TAG_Headcount__c/fields/TAG_Teams__c.field-meta.xml
<CustomField>
    <fullName>TAG_Teams__c</fullName>
    <label>TAG Teams</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Neuro &amp; Ophthalmology</fullName>
            </value>
            <value>
                <fullName>Founders &amp; Special Pop</fullName>
            </value>
            <value>
                <fullName>Immune, Respiratory, &amp; ID</fullName>
            </value>
            <value>
                <fullName>Cardiovascular, Metabolism, and Skeletal</fullName>
            </value>
            <value>
                <fullName>Cancer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>