force-app/main/default/objects/TAG_Headcount__c/fields/Total_Employed__c.field-meta.xml
<CustomField>
    <fullName>Total_Employed__c</fullName>
    <formula>Current_HC__c + Pending_Starts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Employed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>