force-app/main/default/objects/TAG_Headcount__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Budgeted_HC__c</columns>
    <columns>Total_Employed__c</columns>
    <columns>Unfilled_HC__c</columns>
    <columns>Open_HC__c</columns>
    <columns>Current_HC__c</columns>
    <columns>In_Recruitment__c</columns>
    <columns>TAG_Teams__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>